turtleart.lessons.turtleart.Main.DiskFourth.scala.error
Source:4: error: not found: value angle
		angle(i)
                ^