turtleart.lessons.turtleart.Main.DiskFourth.scala.code
override def run() {
	for ( i<- 0 to 90 ) {
		angle(i)
		avance(100)
		recule(100)
	}
}
